[metadata]
name = molann
version = 1.0.7
author = Wei Zhang
author_email = wzhangpku@gmail.com
description="PyTorch Artificial Neural Networks (ANNs) for Molecular Systems",
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/zwpku/molann
project_urls =
    Bug Tracker = https://github.com/zwpku/molann/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
packages = find:
python_requires = >=3.7
install_requires =
  torch >= 1.10.2
  mdanalysis >= 2.0.0
  numpy >= 1.20.3
  pandas >= 1.3.5

